<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/separator"
        android:id="@+id/layout">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/title_app"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/logo_app"
            app:layout_constraintBottom_toBottomOf="@+id/textView26"
            app:layout_constraintStart_toEndOf="@+id/textView26"
            app:layout_constraintTop_toTopOf="@+id/textView26"
            app:srcCompat="@drawable/logo_game" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="384dp"
            android:layout_height="80dp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:maxWidth="300dp"
            android:text="@string/intro_description"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="241dp"
            android:layout_height="63dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/separator_button"
            android:textSize="20sp"
            android:text="@string/sign"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView27"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            app:layout_constraintVertical_bias="0.19" />

        <Button
            android:id="@+id/guest"
            android:layout_width="237dp"
            android:layout_height="62dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/separator_button"
            android:textSize="20sp"
            android:text="@string/guest"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/textView27"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/signIn" />

        <Button
            android:id="@+id/registration"
            android:layout_width="236dp"
            android:layout_height="65dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/separator_button"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="@+id/textView27"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/guest" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/what_google"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/registration"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/registration"
            app:layout_constraintVertical_bias="0.19999999" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="invisible"
            android:contentDescription="@string/logo_google"
            app:layout_constraintBottom_toBottomOf="@+id/textView28"
            app:layout_constraintEnd_toStartOf="@+id/textView28"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toTopOf="@+id/textView28"
            app:srcCompat="@drawable/ic_google_1" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/sign_please"
            android:textColor="#0181FF"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/textView28"
            app:layout_constraintStart_toEndOf="@+id/textView28"
            app:layout_constraintTop_toTopOf="@+id/textView28" />

<!--        <TextView-->
<!--            android:id="@+id/textView30"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:maxWidth="200dp"-->
<!--            android:text="@string/private_term"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/imageView9"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/checkBox" />-->

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:maxWidth="400dp"
            android:textColor="@color/white"
            android:text="@string/private_term"
            app:layout_constraintBottom_toTopOf="@+id/signIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            app:layout_constraintVertical_bias="0.59000003" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>